--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".FullImage"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Project01">
+        </activity>
     </application>
 
 </manifest>
