--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    // ARCore Implementation
+    implementation  'com.google.ar:core:1.14.0'
+    implementation  'com.google.ar.sceneform.ux:sceneform-ux:1.14.0'
+    implementation  'com.google.ar.sceneform:core:1.14.0'
 }
