--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,7 @@
         </activity>
         <activity
             android:name=".FullImage"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.Project01">
+            android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
 
         <meta-data android:name="com.google.ar.core" android:value="required" />
