--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.code.gson:gson:2.8.5'
 
-
     api project(":sceneformux")
+    implementation 'androidx.exifinterface:exifinterface:1.3.2'
 }
